avec objet Post

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
       <h1>{{titre}}</h1>
       <ul class="list-group">
         <app-post-list
-          [post]='post'></app-post-list>
+          [posts_0]='post_t'></app-post-list>
       </ul>
     </div>
   </div>
