--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,7 +1,4 @@
 <app-post-list-item
-    *ngFor="let item of post"
-    [title]="item.title"
-    [created_at]="item.created_at"
-    [content]="item.content"
-    [loveIts]="item.loveIts">
+    *ngFor="let item of posts_0"
+    [post_1]="item">
 </app-post-list-item>
